左側選單完成 #20131106

--- a/App_Folder/admin/index.html
+++ b/App_Folder/admin/index.html
@@ -3,8 +3,52 @@
 <head>
 <meta charset="utf-8">
 <title>無標題文件</title>
+<script src="http://code.jquery.com/jquery.min.js"></script>
+
+<script type="text/javascript">
+$(document).ready(function(){
+
+$("#leftFrame_display").click(function(){
+
+var fs = parent.document.getElementsByTagName("frameset")[1];
+
+if($("#left_staus").val() == "打開"){
+
+$("#left_staus").val("關閉");
+closeFrameset();
+
+}else if($("#left_staus").val() == "關閉"){
+
+$("#left_staus").val("打開");
+openFrameset();
+}
+
+
+});                           
+
+});
+
+
+function closeFrameset(){
+var fs = parent.document.getElementsByTagName("frameset")[1];
+fs.cols = "0,*";
+$("#leftFrame_display").text("打開菜單");
+}
+
+function openFrameset(){
+var fs = parent.document.getElementsByTagName("frameset")[1];
+fs.cols = "202,*";
+$("#leftFrame_display").text("隱藏菜單");
+} 
+</script>
+<!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 </head>
 
-<body>
+<body bgcolor="#663333">
+<span id="leftFrame_display" style="cursor:pointer; color:#063;">1隱藏菜單</span>
+<input type="hidden" name="left_staus" id="left_staus" value="打開">
+
 </body>
 </html>
