--- a/App_Folder/admin.html
+++ b/App_Folder/admin.html
@@ -1,50 +1,28 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="zh-tw">
 <head>
-<meta charset="utf-8">
-<title>無標題文件</title>
-<script src="http://code.jquery.com/jquery-1.10.2.min.js" type="text/javascript"></script>
-<script type="text/javascript">
-$(document).ready(function(){
-
-$("#leftFrame_display").click(function(){
-
-var fs = parent.document.getElementsByTagName("frameset")[1];
-
-if($("#left_staus").val() == "打開"){
-
-$("#left_staus").val("關閉");
-closeFrameset();
-
-}else if($("#left_staus").val() == "關閉"){
-
-$("#left_staus").val("打開");
-openFrameset();
-}
-
-
-});                           
-
-});
-
-
-function closeFrameset(){
-var fs = parent.document.getElementsByTagName("frameset")[1];
-fs.cols = "0,*";
-$("#leftFrame_display").text("打開菜單");
-}
-
-function openFrameset(){
-var fs = parent.document.getElementsByTagName("frameset")[1];
-fs.cols = "110,*";
-$("#leftFrame_display").text("隱藏菜單");
-} 
-</script>
+<meta charset="utf-8" lang="zh-tw">
+<meta name="Author" content="e-innovator" />
+<link rel="shortcut icon"  href="images/favicon.ico"/>
+<link rel="icon" href="images/favicon.ico"/>
+<title>::八方雲集進銷存管理系統::</title>
+<link rel="stylesheet" href="css/reset.css" />
+<link rel="stylesheet" href="css/xue-nav_201311.css"/>
+<!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 </head>
 
-<body style="background:#C90">
-<span id="leftFrame_display" style="cursor:pointer; color:#063;">1隱藏菜單</span>
-<input type="hidden" name="left_staus" id="left_staus" value="打開">
+<frameset rows="0,*" cols="*" frameborder="no" border="0" framespacing="0">
+   <frame src="bak.html" name="topFrame" scrolling="No" noresize="noresize" id="topFrame" title="topFrame" />
+   <frameset rows="*" cols="202,*" framespacing="0" frameborder="no" border="0">
+        <frame src="nav_admin.html" name="leftFrame" scrolling="auto" noresize="noresize" id="leftFrame" title="leftFrame" />
+        <frame src="admin/index.html" name="main" id="main" title="main" />
+   </frameset>
+</frameset>
 
+<noframes>
+<body>
 </body>
+</noframes>
 </html>
