內頁模板建立 80% #20131107

--- a/App_Folder/nav_admin.html
+++ b/App_Folder/nav_admin.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-   <div id="wrap">
+   <div id="wrap" _height="auto">
       <h1>八方雲集</h1>
       <nav>
          <a href="admin/cust/custindex.html" title="客戶基本資料" target="main">客戶基本資料</a>
@@ -29,6 +29,6 @@
       </nav>
       <p class="copyright">八方雲集國際股份有限公司<br/>&copy;2013 版權所有</p>
    </div>
- 
+   
 </body>
 </html>
