--- a/App_Folder/nav_user.html
+++ b/App_Folder/nav_user.html
@@ -17,17 +17,12 @@
    <div id="wrap">
       <h1>八方雲集</h1>
       <nav>
-         <a href="admin/cust/custindex.html" title="客戶基本資料" target="main">客戶基本資料</a>
-         <a href="admin/prod/prodindex.html" title="產品基本資料" target="main">產品基本資料</a>
-         <a href="admin/order/orderindex.html" title="訂單作業" target="main">訂單作業</a>
-         <a href="admin/order/statistics.html" title="訂購統計表" target="main">訂購統計表</a>
-         <a href="admin/prod/statistics.html" title="產品訂購統計表" target="main">產品訂購統計表</a>
-         <a href="#" title="車次領料表">車次領料表</a>
-         <a href="#" title="訂購單領料表">訂購單領料表</a>
-         <a href="admin/order/unorderList.html" title="客戶未訂貨單" target="main">客戶未訂貨單</a>
-         <a href="admin/adminProfile.html" title="管理者帳號設定" target="main">管理者帳號設定</a>
+         <a href="user/order/index.html" title="訂貨作業" target="main">訂貨作業</a>
+         <a href="#" title="店休" target="main">店休</a>
+         <a href="user/setting/userProfile.html" title="密碼設置" target="main">密碼設置</a>
+         <a href="#" title="登出" target="main">登出</a>
       </nav>
-      <p class="copyright">八方雲集國際股份有限公司<br/>&copy;2013 版權所有</p>
+      <p class="copyright pad-top">八方雲集國際股份有限公司<br/>&copy;2013 版權所有</p>
    </div>
  
 </body>
