客戶資料查詢頁 完成 #20131110

--- a/App_Folder/index.html
+++ b/App_Folder/index.html
@@ -36,7 +36,7 @@
                <input id="password" name="password" type="text" class="text_input" onfocus="if (this.value=='請輸入使用者密碼') this.value='';" onblur="if (this.value=='') this.value='請輸入使用者密碼';" value="請輸入使用者密碼" >
             </div>
             
-            <input id="loginbtu" name="loginbtu" type="button" class="btn_login" value="登入" onclick="javascript:location.href='admin.html';">
+            <input id="loginbtu" name="loginbtu" type="submit" class="btn_login" value="登入" onclick="javascript:location.href='admin.html';">
         </form>
       </div>
       <p class="copyright">&copy; 2013 八方雲集國際股份有限公司　版權所有</p>
