客戶基本資料單元 完成 #20131110

--- a/App_Folder/admin/cust/custindex.html
+++ b/App_Folder/admin/cust/custindex.html
@@ -34,7 +34,10 @@
 <section class="main_content">
 <!-- InstanceBeginEditable name="main_content" -->
   
-  <h3>客戶基本資料</h3>
+  <div class="page_title">
+    <h3>客戶基本資料</h3>
+  </div>
+    
     <form action="" method="post">
     <div class="table-bg">
       <table width="100%" class="mytable_search">
@@ -65,7 +68,7 @@
         </tr>
       </table>
       
-      <a href="custList.html" title="確定" class="mybtn btn_gray btmc">確定</a> 
+      <a href="custList.html" title="搜尋" class="mybtn btn_gray btmc">搜尋</a> 
     </div>  
     </form>
   
