--- a/App_Folder/admin/index.html
+++ b/App_Folder/admin/index.html
@@ -34,10 +34,12 @@
 <section class="main_content">
 <!-- InstanceBeginEditable name="main_content" -->
   
+<div class="page_title">
   <h3>訂購單文字檔輸出</h3>
   <div class="box_output">
     <input id="outputbtu" name="outputbtu" type="button" class="btn_login" value="輸出">
   </div>
+</div>  
   
 <!-- InstanceEndEditable -->
 </section>
