產品基本資料完成 #20131113

--- a/App_Folder/admin/cust/custindex.html
+++ b/App_Folder/admin/cust/custindex.html
@@ -68,7 +68,10 @@
         </tr>
       </table>
       
-      <a href="custList.html" title="搜尋" class="mybtn btn_gray btmc">搜尋</a> 
+      <div class="down_btn">
+         <input name="" type="button" class="btn_gray-02" value="搜尋" onclick="javascript:location.href='custList.html';">
+      </div>
+      <!--<a href="custList.html" title="搜尋" class="mybtn btn_gray btmc">搜尋</a>--> 
     </div>  
     </form>
   
