訂購統計表完成 產品訂購統計表完成 客戶未訂貨單完成 #20131119

--- a/App_Folder/admin/cust/custindex.html
+++ b/App_Folder/admin/cust/custindex.html
@@ -40,31 +40,25 @@
     
     <form action="" method="post">
     <div class="table-bg">
-      <table width="100%" class="mytable_search">
+      <table width="100%" class="mytable_search-02">
         <tr>
           <th colspan="2">客戶基本資料查詢</th>
         </tr>
         <tr>
-          <td class="tdr">客戶代碼：</td>
-          <td><input id="custIDA" name="custIDA" type="text" class="mytxtarea w160"> ~ <input id="custIDB" name="custIDB" type="text" class="mytxtarea w160"></td>
+          <td class="tdr">客戶代碼：<input id="custIDA" name="custIDA" type="text" class="mytxtarea w160"> ~ <input id="custIDB" name="custIDB" type="text" class="mytxtarea w160"></td>
         </tr>
         <tr>
-          <td class="tdr">客戶名稱：</td>
-          <td><input id="custName" name="custName" type="text" class="mytxtarea w350"></td>
+          <td class="tdr">客戶名稱：<input id="custName" name="custName" type="text" class="mytxtarea w350"></td>
+         </tr>
+        <tr>
+          <td class="tdr">縣市/區域：<input id="city" name="city" type="text" class="mytxtarea w350"></td>
         </tr>
         <tr>
-          <td class="tdr">縣市/區域：</td>
-          <td><input id="city" name="city" type="text" class="mytxtarea w350"></td>
+          <td class="tdr">聯絡地址：<input id="address" name="address" type="text" class="mytxtarea w350"></td>
         </tr>
         <tr>
-          <td class="tdr">聯絡地址：</td>
-          <td><input id="address" name="address" type="text" class="mytxtarea w350"></td>
-        </tr>
-        <tr>
-          <td class="tdr">直營店：</td>
-          <td><input name="dss" type="radio" value="y">是
-              <input name="dss" type="radio" value="n">否
-          </td>
+          <td class="tdr">直營店：<input name="dss" type="radio" value="y">是
+              <input name="dss" type="radio" value="n">否</td>
         </tr>
       </table>
       
