--- a/App_Folder/admin/order/orderindex.html
+++ b/App_Folder/admin/order/orderindex.html
@@ -277,21 +277,18 @@
       </script>   
     <div id="box_search"><!-- 搜尋區塊 -->
        <form action="" method="post">
-           <table width="100%" class="mytable_search">
+           <table width="100%" class="mytable_search-02">
             <tr>
               <th colspan="2">訂單作業查詢</th>
             </tr>
             <tr>
-              <td class="tdr">訂單日期：</td>
-              <td><input id="startDate" name="startDate" type="text" class="mytxtarea w160"> ~ <input id="dueDate" name="dueDate" type="text" class="mytxtarea w160"></td>
+              <td class="tdr">訂單日期： <input id="startDate" name="startDate" type="text" class="mytxtarea w160"> ~ <input id="dueDate" name="dueDate" type="text" class="mytxtarea w160"></td>
             </tr>
             <tr>
-              <td class="tdr">客戶代號：</td>
-              <td><input id="custRangeStart" name="custRangeStart" type="text" class="mytxtarea w160"> ~ <input id="custRangeEnd" name="custRangeEnd" type="text" class="mytxtarea w160"></td>
+              <td class="tdr">客戶代號：<input id="custRangeStart" name="custRangeStart" type="text" class="mytxtarea w160"> ~ <input id="custRangeEnd" name="custRangeEnd" type="text" class="mytxtarea w160"></td>
             </tr>
             <tr>
-              <td class="tdr">訂貨狀態：</td>
-              <td><select class="mytxtarea w350">
+              <td class="tdr">訂貨狀態：<select class="mytxtarea w350">
                      <option selected>請選擇</option>
                      <option>審核</option>
                      <option>未審核</option>
