--- a/App_Folder/nav_admin.html
+++ b/App_Folder/nav_admin.html
@@ -24,7 +24,7 @@
          <a href="admin/prod/statistics.html" title="產品訂購統計表" target="main">產品訂購統計表</a>
          <a href="#" title="車次領料表">車次領料表</a>
          <a href="#" title="訂購單領料表">訂購單領料表</a>
-         <a href="admin/order/unorderList.html" title="客戶未訂貨單" target="main">客戶未訂貨單</a>
+         <a href="admin/order/unorder.html" title="客戶未訂貨單" target="main">客戶未訂貨單</a>
          <a href="admin/adminProfile.html" title="管理者帳號設定" target="main">管理者帳號設定</a>
       </nav>
       <p class="copyright">八方雲集國際股份有限公司<br/>&copy;2013 版權所有</p>
