--- a/App_Folder/admin/prod/prodindex.html
+++ b/App_Folder/admin/prod/prodindex.html
@@ -45,16 +45,16 @@
           <th colspan="2">產品基本資料查詢</th>
         </tr>
         <tr>
-          <td class="tdr">產品代號：<input id="prodIDA" name="prodIDA" type="text" class="mytxtarea w160"> ~ <input id="prodIDB" name="prodIDB" type="text" class="mytxtarea w160"></td>
+          <td>產品代號：<input id="prodIDA" name="prodIDA" type="text" class="mytxtarea w160"> ~ <input id="prodIDB" name="prodIDB" type="text" class="mytxtarea w160"></td>
         </tr>
         <tr>
-          <td class="tdr">產品名稱：<input id="prodName" name="prodName" type="text" class="mytxtarea w350"></td>
+          <td>產品名稱：<input id="prodName" name="prodName" type="text" class="mytxtarea w350"></td>
         </tr>
         <tr>
-          <td class="tdr">產品類別：<input id="prodType" name="prodType" type="text" class="mytxtarea w350"></td>
+          <td>產品類別：<input id="prodType" name="prodType" type="text" class="mytxtarea w350"></td>
         </tr>
         <tr>
-          <td class="tdr">產品性質：<input id="prodProperty" name="prodProperty" type="text" class="mytxtarea w350"></td>
+          <td>產品性質：<input id="prodProperty" name="prodProperty" type="text" class="mytxtarea w350"></td>
         </tr>
       </table>
       
