--- a/App_Folder/admin/cust/custindex.html
+++ b/App_Folder/admin/cust/custindex.html
@@ -45,19 +45,19 @@
           <th colspan="2">客戶基本資料查詢</th>
         </tr>
         <tr>
-          <td class="tdr">客戶代碼：<input id="custIDA" name="custIDA" type="text" class="mytxtarea w160"> ~ <input id="custIDB" name="custIDB" type="text" class="mytxtarea w160"></td>
+          <td>客戶代碼：<input id="custIDA" name="custIDA" type="text" class="mytxtarea w160"> ~ <input id="custIDB" name="custIDB" type="text" class="mytxtarea w160"></td>
         </tr>
         <tr>
-          <td class="tdr">客戶名稱：<input id="custName" name="custName" type="text" class="mytxtarea w350"></td>
+          <td>客戶名稱：<input id="custName" name="custName" type="text" class="mytxtarea w350"></td>
          </tr>
         <tr>
-          <td class="tdr">縣市/區域：<input id="city" name="city" type="text" class="mytxtarea w350"></td>
+          <td>縣市/區域：<input id="city" name="city" type="text" class="mytxtarea w350"></td>
         </tr>
         <tr>
-          <td class="tdr">聯絡地址：<input id="address" name="address" type="text" class="mytxtarea w350"></td>
+          <td>聯絡地址：<input id="address" name="address" type="text" class="mytxtarea w350"></td>
         </tr>
         <tr>
-          <td class="tdr">直營店：<input name="dss" type="radio" value="y">是
+          <td>直營店：<input name="dss" type="radio" value="y">是
               <input name="dss" type="radio" value="n">否</td>
         </tr>
       </table>
