--- a/App_Folder/admin/order/orderedit.html
+++ b/App_Folder/admin/order/orderedit.html
@@ -64,7 +64,7 @@
           </tr>
           <tr>
             <td>訂購日期：</td>
-            <td colspan="3"><input id="OrderDate" name="OrderDate" type="text" class="mytxtarea w160" value="2013/11/15"></td>
+            <td colspan="3"><input id="OrderDate2" name="OrderDate2" type="text" class="mytxtarea w160" value="2013/11/15"></td>
           </tr>
           <tr>
             <td>備註：</td>
@@ -148,13 +148,31 @@
   <!-- LightBox 區塊說明：目前有兩個隱藏區塊，"#box_search"是搜尋區塊, "#box_add"是新增訂單資料-->
       <link href="http://code.jquery.com/ui/jquery-ui-git.css" rel="stylesheet"/>
 	  <script src="http://code.jquery.com/ui/jquery-ui-git.js"></script>
-      <script>
+      <script src="http://mybidrobot.allalla.com/jquery/jquery.ui.datepicker-zh-TW.js"></script>
+	  <script>
          $(function() {
-          $( "#startDate" ).datepicker();
-          $( "#dueDate" ).datepicker();
-		  $( "#orderDate" ).datepicker();
-         });
-      </script>   
+         $( "#startDate" ).datepicker({
+         showOn: "button",
+         buttonImage: "../../images/calendar.gif",
+         buttonImageOnly: true
+          });
+         $( "#dueDate" ).datepicker({
+         showOn: "button",
+         buttonImage: "../../images/calendar.gif",
+         buttonImageOnly: true
+          });
+		 $( "#orderDate" ).datepicker({
+         showOn: "button",
+         buttonImage: "../../images/calendar.gif",
+         buttonImageOnly: true
+          });
+		 $( "#OrderDate2" ).datepicker({
+         showOn: "button",
+         buttonImage: "../../images/calendar.gif",
+         buttonImageOnly: true
+          });
+        });
+      </script>    
      
      <div id="box_search"><!-- 搜尋區塊 -->
        <form action="" method="post">
