--- a/App_Folder/admin/order/orderindex.html
+++ b/App_Folder/admin/order/orderindex.html
@@ -268,27 +268,43 @@
     <!-- LightBox 區塊說明：目前有三個隱藏區塊，"#box_search"是搜尋區塊，"#box_view"檢視產品資料, "#box_add"是新增訂單資料-->
       <link href="http://code.jquery.com/ui/jquery-ui-git.css" rel="stylesheet"/>
 	  <script src="http://code.jquery.com/ui/jquery-ui-git.js"></script>
-      <script>
+      <script src="http://mybidrobot.allalla.com/jquery/jquery.ui.datepicker-zh-TW.js"></script>
+	  <script>
          $(function() {
-          $( "#startDate" ).datepicker();
-          $( "#dueDate" ).datepicker();
-		  $( "#orderDate" ).datepicker();
-         });
-      </script>   
+         $( "#startDate" ).datepicker({
+         showOn: "button",
+         buttonImage: "../../images/calendar.gif",
+         buttonImageOnly: true
+          });
+         $( "#dueDate" ).datepicker({
+         showOn: "button",
+         buttonImage: "../../images/calendar.gif",
+         buttonImageOnly: true
+          });
+		  $( "#orderDate" ).datepicker({
+         showOn: "button",
+         buttonImage: "../../images/calendar.gif",
+         buttonImageOnly: true
+          });
+        });
+      </script> 
     <div id="box_search"><!-- 搜尋區塊 -->
        <form action="" method="post">
-           <table width="100%" class="mytable_search-02">
+           <table width="100%" class="mytable_search">
             <tr>
               <th colspan="2">訂單作業查詢</th>
             </tr>
             <tr>
-              <td class="tdr">訂單日期： <input id="startDate" name="startDate" type="text" class="mytxtarea w160"> ~ <input id="dueDate" name="dueDate" type="text" class="mytxtarea w160"></td>
+              <td class="tdr">訂單日期：</td>
+              <td><input id="startDate" name="startDate" type="text" class="mytxtarea w160"> ~ <input id="dueDate" name="dueDate" type="text" class="mytxtarea w160"></td>
             </tr>
             <tr>
-              <td class="tdr">客戶代號：<input id="custRangeStart" name="custRangeStart" type="text" class="mytxtarea w160"> ~ <input id="custRangeEnd" name="custRangeEnd" type="text" class="mytxtarea w160"></td>
+              <td class="tdr">客戶代號：</td>
+              <td><input id="custRangeStart" name="custRangeStart" type="text" class="mytxtarea w160"> ~ <input id="custRangeEnd" name="custRangeEnd" type="text" class="mytxtarea w160"></td>
             </tr>
             <tr>
-              <td class="tdr">訂貨狀態：<select class="mytxtarea w350">
+              <td class="tdr">訂貨狀態：</td>
+              <td><select class="mytxtarea w350">
                      <option selected>請選擇</option>
                      <option>審核</option>
                      <option>未審核</option>
