--- a/App_Folder/user/index.html
+++ b/App_Folder/user/index.html
@@ -1,54 +1,50 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="zh-tw"><!-- InstanceBegin template="/Templates/page_temp.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-<meta charset="utf-8">
-<title>無標題文件</title>
+<meta charset="utf-8" lang="zh-tw">
+<meta name="Author" content="e-innovator" />
+<link rel="shortcut icon"  href="../admin/images/favicon.ico"/>
+<link rel="icon" href="../admin/images/favicon.ico"/>
+<!-- InstanceBeginEditable name="doctitle" -->
+<title>::八方雲集進銷存管理系統::</title>
+<!-- InstanceEndEditable -->
+<link rel="stylesheet" href="../css/reset.css" />
+<link rel="stylesheet" href="../css/xue-content_201311.css"/>
 <script src="http://code.jquery.com/jquery.min.js"></script>
-
-<script type="text/javascript">
-$(document).ready(function(){
-
-$("#leftFrame_display").click(function(){
-
-var fs = parent.document.getElementsByTagName("frameset")[1];
-
-if($("#left_staus").val() == "打開"){
-
-$("#left_staus").val("關閉");
-closeFrameset();
-
-}else if($("#left_staus").val() == "關閉"){
-
-$("#left_staus").val("打開");
-openFrameset();
-}
-
-
-});                           
-
-});
-
-
-function closeFrameset(){
-var fs = parent.document.getElementsByTagName("frameset")[1];
-fs.cols = "0,*";
-$("#leftFrame_display").text("打開菜單");
-}
-
-function openFrameset(){
-var fs = parent.document.getElementsByTagName("frameset")[1];
-fs.cols = "202,*";
-$("#leftFrame_display").text("隱藏菜單");
-} 
-</script>
 <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
 </head>
 
-<body bgcolor="#663333">
-<span id="leftFrame_display" style="cursor:pointer; color:#063;">1隱藏菜單</span>
-<input type="hidden" name="left_staus" id="left_staus" value="打開">
+<body>
+<header>
+   <div class="btn_hide">
+     <span id="leftFrame_display">隱藏選單</span>
+     <input type="hidden" name="left_staus" id="left_staus" value="打開">
+   </div>  
+   <div class="box_loginfo">
+      歡迎登入，騰冠科技
+      <a href="#" title="登出" class="mybtn btn_red">登出</a>
+   </div>
+</header>
 
+
+<section class="main_content">
+<!-- InstanceBeginEditable name="main_content" -->
+  
+<div class="page_title">
+  <h3>店家訂購首頁</h3>
+  <div class="box_output">
+    <h4>歡迎回來，請點選左側選單進行操作。</h4>
+  </div>
+</div>  
+  
+<!-- InstanceEndEditable -->
+</section>
+
+
+<script src="../scripts/hide_show.js"></script><!-- 隱藏選單 -->
 </body>
-</html>
+<!-- InstanceEnd --></html>
