框架高度修改成不能移動 #20131126

--- a/App_Folder/admin/order/orderindex.html
+++ b/App_Folder/admin/order/orderindex.html
@@ -14,7 +14,7 @@
 </head>
 
 <frameset rows="50%,50%" frameborder="no" border="0" framespacing="0">
-  <frame id="orderlist" src="orderlist.html" name="orderlist" scrolling="yes" title="top">
+  <frame id="orderlist" src="orderlist.html" name="orderlist" scrolling="yes" title="top" noresize>
   <frame id="orderedit" src="orderedit.html" name="orderedit" title="mainFrame">
 </frameset>
 <noframes><body>
