--- a/App_Folder/nav_user.html
+++ b/App_Folder/nav_user.html
@@ -18,9 +18,9 @@
       <h1>八方雲集</h1>
       <nav>
          <a href="user/order/index.html" title="訂貨作業" target="main">訂貨作業</a>
-         <a href="#" title="店休" target="main">店休</a>
+         <a href="user/close/closeList.html" title="店休" target="main">店　　休</a>
          <a href="user/setting/userProfile.html" title="密碼設置" target="main">密碼設置</a>
-         <a href="#" title="登出" target="main">登出</a>
+         <a href="#" title="登出" target="main">登　　出</a>
       </nav>
       <p class="copyright pad-top">八方雲集國際股份有限公司<br/>&copy;2013 版權所有</p>
    </div>
