訂單作業表格間距調整 #20131209

--- a/App_Folder/admin/order/orderlist.html
+++ b/App_Folder/admin/order/orderlist.html
@@ -44,6 +44,7 @@
   <script src="../../scripts/vtip-min.js"></script><!-- 提示框效果 -->
   <script src="../../scripts/web_set.js"></script><!-- 綜合效果 -->
   <div class="table-bg clean">
+    <style>.mytable_list td{ padding:0 5px}</style>
     <table width="100%" class="mytable_list">
       <thead>
         <tr>
