修改訂單作業標題間距 #20131217

--- a/App_Folder/admin/order/orderedit-02.html
+++ b/App_Folder/admin/order/orderedit-02.html
@@ -17,11 +17,11 @@
 <body>
 <section class="main_content-02">
 
-<div class="page_title-02">
+<div class="page_title-04">
      <span class="top_line"></span>
      <div class="topbox">
        <h3 class="lay-left">編輯訂單作業</h3>
-        <ul class="lay-right">
+        <ul class="lay-right-03">
             <li><input name="" type="button" class="btn_gray-02" value="列印"></li>
             <li><input name="" type="button" class="btn_gray-02" value="取消" onclick="javascript:location.href='orderedit.html';"></li>
             <li><input name="" type="button" class="btn_gray-02" value="儲存"></li>
@@ -30,7 +30,7 @@
   </div>
   
   <div class="subpage">
-  <div class="table-bg-03 clean">
+  <div class="table-bg-05 clean">
       <table width="100%" class="mytable_info">
           <tr>
             <th colspan="6">客戶基本資料</th>
