--- a/App_Folder/admin/order/orderlist.html
+++ b/App_Folder/admin/order/orderlist.html
@@ -28,9 +28,9 @@
 
 
 <section class="main_content">
-<div class="page_title">
+<div class="page_title-03">
       <h3 class="lay-left">訂單作業列表</h3>
-      <ul class="lay-right">
+      <ul class="lay-right-03">
           <li><a href="#box_search" title="搜尋訂單" class="mybtn btn_gray fancybox">搜尋</a></li>
           <li><a href="#" title="刪除" class="mybtn btn_gray">刪除</a></li>
           <li><a href="#box_add" title="新增訂單" class="mybtn btn_gray fancybox">新增</a></li>
@@ -43,7 +43,7 @@
   <script src="../../scripts/jquery.fancybox.pack.js"></script><!-- lightbox效果 -->
   <script src="../../scripts/vtip-min.js"></script><!-- 提示框效果 -->
   <script src="../../scripts/web_set.js"></script><!-- 綜合效果 -->
-  <div class="table-bg clean">
+  <div class="table-bg-04 clean">
     <style>.mytable_list td{ padding:0 5px}</style>
     <table width="100%" class="mytable_list">
       <thead>
