--- a/App_Folder/admin/order/orderedit.html
+++ b/App_Folder/admin/order/orderedit.html
@@ -19,11 +19,11 @@
 
 <section class="main_content-02">
 
-<div class="page_title-02">
+<div class="page_title-04">
      <span class="top_line"></span>
      <div class="topbox">
        <h3 class="lay-left">檢視訂單作業</h3>
-        <ul class="lay-right">
+        <ul class="lay-right-03">
             <li><input name="" type="button" class="btn_gray-02" value="列印"></li>
             <li><input name="" type="button" class="btn_gray-02" value="編輯" onclick="javascript:location.href='orderedit-02.html';"></li>
         </ul>
@@ -31,7 +31,7 @@
   </div>
   
   <div class="subpage">
-  <div class="table-bg-03 clean">
+  <div class="table-bg-05 clean">
       <table width="100%" class="mytable_info">
           <tr>
             <th colspan="6">客戶基本資料</th>
