訂單作業欄位編距修改+新增數量修改頁面 #20131219

--- a/App_Folder/admin/order/orderindex.html
+++ b/App_Folder/admin/order/orderindex.html
@@ -13,8 +13,8 @@
 <![endif]-->
 </head>
 
-<frameset rows="50%,50%" frameborder="no" border="0" framespacing="0">
-  <frame id="orderlist" src="orderlist.html" name="orderlist" scrolling="yes" title="top" noresize>
+<frameset rows="30%,70%" frameborder="no" border="0" framespacing="0">
+  <frame id="orderlist" src="orderlist.html" name="orderlist" scrolling="yes" title="top">
   <frame id="orderedit" src="orderedit.html" name="orderedit" title="mainFrame">
 </frameset>
 <noframes><body>
