按鈕大小調整一致+表格高度縮小 #20140218

--- a/App_Folder/user/order/index.html
+++ b/App_Folder/user/order/index.html
@@ -39,6 +39,7 @@
       <ul class="lay-right">
           <li><a href="#box_search" title="切換店家" class="mybtn btn_gray fancybox">切換店家</a></li>
           <li><input name="" type="button" class="btn_gray-02" value="取消整張訂單"></li>
+          <li><input name="" type="button" class="btn_gray-02" value="上傳訂單"></li>
       </ul>
   </div>
    
